--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
           <br>
           Abang minta maaf yak sayang baru ngasihnya sekarang dan abang Minta maaf kalau tampilannya sederhana 
           <br>
-          Tidak ada hari lain yang seistimewa hari ulang tahun. Dan ketika itu adalah hari ulang tahun Adek Sayangku, Abang tidak bisa membiarkannya berlalu tanpa 
+          Tidak ada hari lain yang seistimewa selain hari ulang tahun. Dan ketika itu adalah hari ulang tahun Adek Sayangku, Abang tidak bisa membiarkannya berlalu tanpa 
           <br>
           mengucapkan selamat ulang tahun yang spesial. Yang dapat membuatku bahagia bukanlah uang dan harta, melainkan hati & ketulusanmu dalam mencintaiku
           <br>
           selamat ulang tahun, dan semoga panjang umur sayang. Semoga Adek diberikan umur yang barokah, di berikan kesabaran dan ketabahan, di kuatkan hatinya,
           <br>
-           berbakti kepada orangtua, menjadi pribadi yang lebih baiki, menjadi anak yang solihah, menjadi anak yang pintardan rajin. Abang Berdoa yang terbaik untuk 
+           berbakti kepada orangtua, menjadi pribadi yang lebih baik, menjadi anak yang solihah, menjadi anak yang pintar dan rajin. Abang Berdoa yang terbaik untuk 
            <br>
            Adek dan semoga Allah memberkahi umur adek yang ke 17 Tahun ini  AAAAMMIIIINNN.......
            <br>
